@@ -22,9 +22,15 @@
   * Fixed major bug with joysticks, where mapping was being lost on reset,
     the app would crash when plugging/unplugging certain sticks, etc.
 
+  * Added dialog which shows the joystick database, and the ability to
+    remove (currently unplugged) joysticks from this database.
+
+  * Added preliminary support for 'WD' (Wickstead Design) bankswitching
+    scheme.
+
   * The minimum supported version for the OSX port is now OSX 10.7.
     Because of this, the 32-bit version is also discontinued, as 10.7
-    is 64-bit Intel only.
+    supports 64-bit Intel only apps.
 
   * The debugger 'reset' command now does a complete system reset,
     instead of simply setting the PC to the reset vector address.
